Edit place form

--- a/src/flavors/phila2035/jstemplates/activity-list-item.html
+++ b/src/flavors/phila2035/jstemplates/activity-list-item.html
@@ -13,7 +13,7 @@
         {{#if is_place }}
           identified a{{#if place.type_starts_with_vowel }}n{{/if }} <span class="place-type">{{ place.place_type_label }}</span>
           {{#if place.name }}
-            named <span class="place-name">{{ place.name }}</span>
+            at <span class="place-name">{{ place.name }}</span>
           {{^}}
             {{#if place.location }}
               at <span class="place-name">{{>location-string place.location }}</span>
