Add History link, fix address search

--- a/src/flavors/phila2035/jstemplates/pages/planning.html
+++ b/src/flavors/phila2035/jstemplates/pages/planning.html
@@ -1,6 +1,6 @@
-<h1>About the District</h1>
+<h1>Planning Process</h1>
 
 <p>The <strong>South District Plan</strong> is a 10-month process to focus attention on South Philadelphia as part of the wider Philadelphia Comprehensive Plan. It includes publid input, discussions with city agencies, presentation to elected officials and a list of recommendations to help prioritize inestment decisions and inform zoning.</p>
-<p>South Philadelphia has a unique and varied history of immigration that continues today. The legacy is in its unique and thriving cultural corridors, restaurants, and intact residential communities.</p>
+<p>South Philadelphia has a unique and varied <a href="http://bit.ly/104yB44" target="_blank">history</a> of immigration that continues today. The legacy is in its unique and thriving cultural corridors, restaurants, and intact residential communities.</p>
 
 <p>Strengths of the district include its proximity to employment opportunities, a steadily growing population, and a variety of transportation options and walkably scaled streets.</p>
