Show icons in legend, edit page titles and text

--- a/src/flavors/phila2035/jstemplates/pages/about.html
+++ b/src/flavors/phila2035/jstemplates/pages/about.html
@@ -1,6 +1,5 @@
-<h1>Welcome</h1>
-
-<p>to the <strong>Philadelphia2035 South District</strong> Planning page! This site is here to find out what places are important to you, what makes it hard to get around, what you think is working well and what you would like to see changed about the built environment in South Philadelphia.</p>
+<h3>Welcome to the <strong>Philadelphia2035 South District</strong> Planning page!</h3>
+<p>This site is here to find out what places are important to you, what makes it hard to get around, what you think is working well and what you would like to see changed about the built environment in South Philadelphia.</p>
 <p>Your comments will help us focus our attention to improve the quality of life for the neighborhoods.</p>
 
 <p>Pleae visit often to keep up on planning events in the South District, and to give us your feedback.</p>
