--- a/src/flavors/phila2035/jstemplates/pages/instructions.html
+++ b/src/flavors/phila2035/jstemplates/pages/instructions.html
@@ -1,10 +1,10 @@
 <h1>Instructions</h1>
 
 <ul>
-  <li>Click on the "Share your Knowledge" button to get started.</li>
-  <li>Move the map so that the crosshairs lie over the place you want to add, zooming in or out as you need.</li>
-  <li>Fill out the form with as much information as you want to provide.</li>
+  <li>Click on the "Share Your Knowledge" button to get started.</li>
+  <li>To discuss a particular location, either enter the address into the address bar above or drag the map until the crosshairs lie over the desired location.</li>
   <li>Click "Submit" to add your thoughts to the map.</li>
+  <li>To add another point, click on "Share Your Knowledge" again.</li>
 </ul>
 
 <p class="btn btn-block btn-large close-btn">Get started!</p>
