New logo, revert to old icons, edit directions in the place form

--- a/src/flavors/phila2035/jstemplates/place-form.html
+++ b/src/flavors/phila2035/jstemplates/place-form.html
@@ -1,4 +1,4 @@
-        <p class="drag-marker-instructions">{{#_}}Enter an address in the address search bar <br> OR <br> Drag the map until the crosshairs lie over your desired location{{/_}}</p>
+        <p class="drag-marker-instructions">{{#_}}To start, enter an address in the address search bar <br> OR <br> Drag the map until the crosshairs lie over your desired location{{/_}}</p>
         <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
         <h4 class="">{{ place_config.title }}</h4>
