Fix start page, title case font in dropdown menus

--- a/src/flavors/phila2035/jstemplates/pages/about.html
+++ b/src/flavors/phila2035/jstemplates/pages/about.html
@@ -4,4 +4,4 @@
 
 <p>Pleae visit often to keep up on planning events in the South District, and to give us your feedback.</p>
 
-<p class="btn btn-block btn-large close-btn">Get started!</p>
+<p class="btn btn-block btn-large close-btn">GET STARTED!</p>
