--- a/src/flavors/phila2035/jstemplates/pages/instructions.html
+++ b/src/flavors/phila2035/jstemplates/pages/instructions.html
@@ -7,4 +7,4 @@
   <li>To add another point, click on "Share Your Knowledge" again.</li>
 </ul>
 
-<p class="btn btn-block btn-large close-btn">Get started!</p>
+<p class="btn btn-block btn-large close-btn">GET STARTED!</p>
